<resources>
    <string name="app_name">Travel Now</string>
    <string name="text_transport">Transport</string>
    <string name="text_link">Link</string>
    <string name="text_accommodation">Accommodation</string>
    <string name="text_availability">Availability</string>
    <string name="text_participants">Participants</string>
    <string name="text_pln">%1$sPLN</string>
    <string name="text_fetch_failure">"Couldn't fetch the data, try again!</string>
    <string name="text_post_failure">"Couldn't post the data, try again!</string>
    <string name="text_delete_failure">"Couldn't delete the data, try again!</string>
    <string name="text_leave_failure">"Couldn't leave the group! Perhaps you have unresolved financial settlements!</string>
    <string name="text_start_trip_failure">"Couldn't start trip, try again!</string>
    <string name="text_item_post_failure">"Couldn't post the %1$s, check the data and try again!</string>
    <string name="text_my_votes">My votes</string>
    <string name="text_my_accommodations">My accommodations</string>
    <string name="text_add">Add</string>
    <string name="text_accept">Accept</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_leave">Leave</string>
    <string name="text_title_accept_dialog">Are you sure you want to accept?</string>
    <string name="text_title_delete_dialog">Are you sure you want to delete?</string>
    <string name="text_title_resolve_dialog">Are you sure you want to resolve?</string>
    <string name="text_title_leave_dialog">Are you sure you want to leave?</string>
    <string name="text_title_transport_dialog">Cannot show transport options!</string>
    <string name="text_title_coordinate_dialog">Are you sure you want set %1$s as coordinator?</string>
    <string name="text_message_cannot_undo">You cannot undo this operation!</string>
    <string name="text_message_cannot_generate">Transport options cannot be generated if no availability is accepted.</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_description">Description</string>
    <string name="text_description_placeholder">This hotel is very close to the beach…</string>
    <string name="text_description_attraction_placeholder">This attraction offers a unique experience…</string>
    <string name="text_link_placeholder">www.booking.com/Share</string>
    <string name="text_link_google_placeholder">https://goo.gl/maps/xAhqpKVUXiQbHbBH7</string>
    <string name="text_link_helper">Please use shortened link!</string>
    <string name="text_text_empty">This field cannot be empty!</string>
    <string name="text_password_rules">Password needs to have at least 6 characters, at least one letter and one number!</string>
    <string name="text_plans">Plans</string>
    <string name="text_finances">Finances</string>
    <string name="text_dash">-</string>
    <string name="format_dash">%1$s - %2$s</string>
    <string name="format_time">%1$dh %2$dmin</string>
    <string name="format_space">%1$s %2$s</string>
    <string name="format_days">%1$d days</string>
    <string name="text_my_dates">My dates</string>
    <string name="format_date">%1$d.%2$d.%3$d</string>
    <string name="text_dates_overlapping">Chosen range overlaps existing range. Choose different dates!</string>
    <string name="text_optimized_dates">Optimized dates</string>
    <string name="text_s">S</string>
    <string name="text_m">M</string>
    <string name="text_t">T</string>
    <string name="text_w">W</string>
    <string name="text_f">F</string>
    <string name="text_participants_no">%1$d participants</string>
    <string name="text_see_in_maps">See in maps</string>
    <string name="text_from_to">From %1$s to %2$s</string>
    <string name="text_from">from %1$s</string>
    <string name="format_dot">%1$d.</string>
    <string name="format_km">%1$.1f km</string>
    <string name="text_questionmark">\?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_add_more">Add more</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email</string>
    <string name="text_new_to_the_app_sign_up">New to the app? Sign up!</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign up</string>
    <string name="text_already_have_an_account_sign_in">Already have an account? Sign in!</string>
    <string name="text_submit">Submit</string>
    <string name="text_new_accommodation">New accommodation</string>
    <string name="text_edit_accommodation">Edit accommodation</string>
    <string name="text_new_attraction">New attraction</string>
    <string name="text_edit_attraction">Edit attraction</string>
    <string name="text_new_day_plan">New day plan</string>
    <string name="text_edit_day_plan">Edit day plan</string>
    <string name="text_name">Name</string>
    <string name="text_title">Title</string>
    <string name="text_date">Date</string>
    <string name="text_first_name">First name</string>
    <string name="text_surname">Surname</string>
    <string name="text_birthday">Birthday</string>
    <string name="text_full_name">Full name</string>
    <string name="text_invite">Invite</string>
    <string name="text_set_coordinator">Set coordinator</string>
    <string name="text_link_copied">Link copied to clipboard</string>
    <string name="text_planning">Planning</string>
    <string name="text_ongoing">Ongoing</string>
    <string name="text_finished">Finished</string>
    <string name="text_starting_city">Starting city</string>
    <string name="text_currency">Currency</string>
    <string name="text_new_group">New group</string>
    <string name="text_edit_group">Edit group</string>
    <string name="text_day_plans">Day plans</string>
    <string name="text_summary">Summary</string>
    <string name="text_no_accommodation_chosen">No accommodation chosen yet!</string>
    <string name="text_retry">Retry</string>
    <string name="text_meeting_at">meeting at: %1$s</string>
    <string name="text_price">Price</string>
    <string name="text_meeting_time">Meeting time</string>
    <string name="text_meeting_date">Meeting date</string>
    <string name="text_hours">Hours</string>
    <string name="text_minutes">Minutes</string>
    <string name="text_destination">Destination</string>
    <string name="text_meeting_location">Meeting location</string>
    <string name="text_means_of_transport">Means of transport</string>
    <string name="text_new_transport">New transport</string>
    <string name="text_edit_transport">Edit transport</string>
    <string name="text_minimal_number_of_participants">Minimal number of participants</string>
    <string name="text_minimal_duration">Minimal duration</string>
    <string name="text_copy">Copy</string>
    <string name="text_expenses">Expenses</string>
    <string name="text_my_expenses">My expenses</string>
    <string name="text_my_contributions">My contributions</string>
    <string name="text_settlements">Settlements</string>
    <string name="text_pending">Pending</string>
    <string name="text_resolved">Resolved</string>
    <string name="text_resolve">Resolve</string>
    <string name="text_my_settlements">My settlements</string>
    <string name="text_other_settlements">Other settlements</string>
    <string name="text_ok">OK</string>
    <string name="text_save">Save</string>
    <string name="text_balances">Balances</string>
    <string name="text_contributors">Contributors</string>
    <string name="text_new_expense">New expense</string>
    <string name="text_edit_expense">Edit expense</string>
    <string name="text_click_twice"> Click back button twice to exit the app!</string>
    <string name="format_plus"> +%1$s </string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_not_login">Login unsuccessful. Please check your email and password.</string>
    <string name="text_not_login_short">Login unsuccessful. Please try again later.</string>
    <string name="text_not_register">Register unsuccessful. Please try again later.</string>
    <string name="text_register_successful">Register successful. Logging in…</string>
    <string name="text_you_need_to_choose_at_least_one_contributor">You need to choose at least one contributor!</string>
    <string name="text_error_multiple">This fields cannot be empty!</string>
    <string name="text_error_phone">Enter a valid 5–13 digit phone number!</string>
    <string name="text_error_code">Enter a valid 1–4 digit code!</string>
    <string name="text_error_code_phone">Enter valid 1–4 digit code and 5–13 digit phone number!</string>
    <string name="text_error_not_same">Passwords do not match!</string>
    <string name="text_no_accommodations">No accommodations added yet!</string>
    <string name="text_no_groups">No groups added yet!</string>
    <string name="text_no_attractions">No attractions added yet!</string>
    <string name="text_no_attractions_found">No attractions found!</string>
    <string name="text_no_expenses">No expenses added yet!</string>
    <string name="text_no_day_plans">No day plans added yet!</string>
    <string name="text_no_settlements">No settlements needed yet!</string>
    <string name="text_edit_personal_data">Edit personal data</string>
    <string name="text_cannot_edit_group">You cannot edit an ongoing or finished group!</string>
    <string name="text_is_now_coordinator"> %1$s is now a coordinator!  </string>
    <string name="text_accommodation_accepted"> Accommodation accepted! See it in summary. </string>
    <string name="text_cannot_modify_accommodation">Cannot modify accepted accommodation!</string>
    <string name="text_cannot_modify_dates_coordinator">Cannot modify dates if you are not a coordinator!</string>
    <string name="text_cannot_modify_dates_ongoing">Cannot modify dates on an ongoing trip!</string>
    <string name="text_availability_accepted"> Dates accepted! See them in summary. </string>
    <string name="text_edit_user_data">Edit user data</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_leave_group">Leave group</string>
    <string name="text_groups">Groups</string>
    <string name="text_set_start">Set as start</string>
    <string name="text_no_dates_fulfill_requirements">No dates fulfill requirements!</string>
    <string name="text_no_transport_ideas_added_yet">No transport ideas added yet!</string>
</resources>