<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/accommodation"
        android:enabled="true"
        android:icon="@drawable/ic_outline_hotel_24"
        android:title="@string/text_accommodation"/>
    <item
        android:id="@+id/availabilityPager"
        android:enabled="true"
        android:icon="@drawable/ic_outline_calendar_month_24"
        android:title="@string/text_availability"/>
    <item
        android:id="@+id/participants"
        android:enabled="true"
        android:icon="@drawable/ic_outline_people_alt_24"
        android:title="@string/text_participants"/>
    <item
        android:id="@+id/summary"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_checklist_24"
        android:title="@string/text_summary"/>
</menu>