<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/legendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/legendText2"
            style="@style/TextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/text_m"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/legendText3"
            style="@style/TextSmall"
            android:layout_width="0dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_t"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/legendText4"
            style="@style/TextSmall"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_w"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/legendText5"
            style="@style/TextSmall"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_t"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/legendText6"
            style="@style/TextSmall"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_f"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/legendText7"
            style="@style/TextSmall"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_s"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/legendText1"
            style="@style/TextSmall"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_s"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>
</layout>