<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardWhite"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/marginL"
    android:layout_marginTop="-24dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/layout_top_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_sign_up"
            style="@style/TextMega"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginXXXXL"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginL"
            android:layout_marginTop="@dimen/marginXXXXL"
            android:hint="@string/text_email"
            app:endIconTint="@color/primary"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_sign_up"
            app:placeholderText="example@email.com"
            app:startIconDrawable="@drawable/ic_baseline_mail_outline_24"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLength="100" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginL"
            android:layout_marginTop="@dimen/marginS"
            android:hint="@string/text_full_name"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textField_email"
            app:placeholderText="John Doe">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginL"
            android:layout_marginTop="@dimen/marginS"
            android:hint="@string/text_birthday"
            app:startIconDrawable="@drawable/ic_baseline_cake_24"
            app:startIconTint="@color/primary"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField_name"
            app:placeholderText="dd.mm.yyyy">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_date"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="false"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginL"
            android:layout_marginTop="@dimen/marginS"
            android:hint="@string/text_password"
            app:endIconDrawable="@drawable/ic_baseline_visibility_24"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/primary"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField_date"
            app:startIconDrawable="@drawable/ic_outline_lock_24"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="255" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_repeat_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginL"
            android:layout_marginTop="@dimen/marginS"
            android:hint="@string/repeat_password"
            app:endIconDrawable="@drawable/ic_baseline_visibility_24"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/primary"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField_password"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="255" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_sign_up"
            style="@style/Button.Contained.Gradient"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/marginXXXXL"
            android:layout_marginVertical="@dimen/marginXXL"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField_repeat_password" />

        <Button
            android:id="@+id/button_register"
            style="@style/Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginS"
            android:layout_marginBottom="@dimen/marginXXXXL"
            android:text="@string/text_already_have_an_account_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
