<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/layout_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:colorScheme="@color/primary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".views.fragments.AccommodationListFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/menu_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="@dimen/marginSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginVertical="@dimen/marginSmall"
                    android:layout_marginStart="@dimen/marginSmall"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_votes"
                        style="@style/Chip.Secondary"
                        android:layout_marginVertical="@dimen/marginSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/marginSmall"
                        android:text="@string/text_my_votes" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_accommodations"
                        style="@style/Chip.Secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/marginSmall"
                        android:layout_marginStart="@dimen/marginSmall"
                        android:text="@string/text_my_accommodations" />

                </com.google.android.material.chip.ChipGroup>

                <Button
                    android:id="@+id/button_add"
                    style="@style/Button.Contained"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/marginSmall"
                    android:text="@string/text_add"
                    app:icon="@drawable/ic_baseline_add_24"
                    app:iconGravity="end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/accommodation_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>